# AdventOfCode2020

./: .gitignore  Cargo.toml
benches/: aoc2020_benchmark.rs
src/: lib.rs  main.rs
src/days/day1/: mod.rs  part1.rs  part2.rs
src/days/day10/: mod.rs  part1.rs  part2.rs
src/days/day11/: mod.rs  part1.rs  part2.rs
src/days/day12/: mod.rs  part1.rs  part2.rs
src/days/day13/: mod.rs  part1.rs  part2.rs
src/days/day14/: mod.rs  part1.rs  part2.rs
src/days/day15/: mod.rs  part1.rs
src/days/day16/: mod.rs  part1.rs  part2.rs
src/days/day17/: mod.rs  part1.rs  part2.rs
src/days/day18/: mod.rs  part1.rs  part2.rs
src/days/day19/: mod.rs  part1.rs  part2.rs
src/days/day2/: mod.rs  part1.rs  part2.rs
src/days/day20/: mod.rs  part1.rs  part2.rs
src/days/day21/: mod.rs  part1.rs  part2.rs
src/days/day22/: mod.rs  part1.rs  part2.rs
src/days/day23/: mod.rs  part1.rs  part2.py  part2.rs
src/days/day24/: mod.rs  part1.rs  part2.rs
src/days/day25/: mod.rs  part1.rs
src/days/day3/: mod.rs  part1.rs  part2.rs
src/days/day4/: mod.rs  part1.rs  part2.rs
src/days/day5/: mod.rs  part1.rs  part2.rs
src/days/day6/: mod.rs  part1.rs  part2.rs
src/days/day7/: mod.rs  part1.rs  part2.rs
src/days/day8/: mod.rs  part1.rs  part2.rs
src/days/day9/: mod.rs  part1.rs  part2.rs
