[package]
name = "aoc2020"
version = "0.1.0"
authors = ["ivardb <ivardb@gmail.com>"]
edition = "2018"

[lib]
name = "aoc2020"
path = "src/lib.rs"

[[bin]]
name = "aoc2020_runner"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
direction = "0.17.10"
maplit = "1.0.2"