[package]
name = "aoc2020"
version = "0.1.0"
authors = ["ivardb <ivardb@gmail.com>"]
edition = "2018"

[lib]
name = "aoc2020"
path = "src/lib.rs"

[[bin]]
name = "aoc2020_runner"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
direction = "0.17.10"
criterion = "0.3.3"
grid = "0.2.3"
itertools = "0.9.0"

[profile.release]
opt-level = 3
lto = true

[[bench]]
name = "aoc2020_benchmark"
harness = false